--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,3 @@
----
-output: md_document
----
 # Reproducible Research: Peer Assessment 1
 
 ## Loading and preprocessing the data
@@ -9,7 +6,7 @@ url <- "C:/Users/a/Desktop/DS/5 Reproducible Research/assignment 1/"
 setwd(url)
 ```
 
-File [activity.zip](https://github.com/ua-umka/RepData_PeerAssessment1/blob/master/activity.zip?raw=true) are downloaded and uncompressed in a working directory. To uncompress the file *downloader package* is used.
+File [activity.zip](https://github.com/ua-umka/RepData_PeerAssessment1/blob/master/activity.zip?raw=true) is downloaded and uncompressed in a working directory. To uncompress the file, *downloader package* is used.
 ```{r}
 library("downloader")
 if (!file.exists("activity.zip")) {
@@ -28,7 +25,7 @@ hist(day$steps, main = "Total number of steps taken each day",
 ```
 
 
-## What is mean and median total number of steps taken per day?
+## What is the mean and the median total number of steps taken per day?
 ```{r}
 mean(day$steps)
 median(day$steps)
@@ -41,9 +38,6 @@ To address this question, a time series plot is drawn. X-axis represents the 5-m
 interv <- aggregate(steps ~ interval, data = data, mean)
 plot(interv$interval, interv$steps, type = "l", xlab = "Interval", ylab = "Steps", main = "Average number of steps by intervals")
 ```
-
-**Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?**
-
 
 ## Imputing missing values
 First, we'll calculate the total number of rows with at least one missing value in it.
@@ -77,7 +71,8 @@ hist(day$steps, main = "Without NAs",
      xlab = "Number of steps", col = "blue")
 ```
 
-Doesn't see any difference. How about mean and median of the total number of steps taken per day?
+We don't observe any difference. What about the mean and median of the total
+number of steps taken per day?
 
 ```{r}
 mean(dayWhNas$steps); median(dayWhNas$steps)
@@ -85,7 +80,7 @@ mean(dayWhNas$steps); median(dayWhNas$steps)
 mean(dayWhNas$steps) - mean(day$steps); median(day$steps) - median(dayWhNas$steps)
 ```
 
-So there is a slight change in median. The median of the data without NAs is higher by 1.19 step per day.
+So there is a slight change in the median. The median of the data without NAs is higher by 1.19 step per day.
 
 ## Are there differences in activity patterns between weekdays and weekends?
 Let's create a new factor variable in the dataset with two levels Weekend and Weekday.
@@ -110,5 +105,6 @@ plot(weekDays, type = "l", main = "Weekdays", ylim = c(0,250), col = "blue")
 plot(weekEnds, type = "l", main = "Weekends", ylim = c(0,250), col = "red")
 
 ```
-
-They definitely differs. We don't see such a big step spikes during weekends as we see for Weekdays, but overall the are more steps during weekends than weekdays.
+They definitely differ. We don't see such a big step spikes during
+weekends as we see for Weekdays, but overall the are more steps during
+weekends than weekdays.
